# tonic-web-wasm-client-example

./: LICENSE  README.md
client/: Cargo.toml  build.rs  index.html  main.css
client/src/: client_grpc.rs  main.rs  message_fetcher.rs  message_grpc.rs
proto/: message.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  message_service.rs
