[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.3"
gloo-utils = "0.1"
prost = "0.12.1"
tokio = { version="1.33.0", features=["rt"]}
tonic = { version="0.10.2", default-features = false, features=["prost","codegen"] }
tonic-web-wasm-client = "0.5.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
yew = { version="0.21.0", features = ["csr"] }
yew-router = "0.18.0"


[build-dependencies]
tonic-build = { version="0.10.2", default-features = false, features = ["prost"]}
