[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "time", "rt-multi-thread", "rt"] }
tonic = { version="0.10.2", features=["prost"] }
prost = "0.12"

[build-dependencies]
tonic-build = "0.10.0"