[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "time", "rt-multi-thread", "rt"] }
tonic = { version="0.10.2", features=["prost"] }
prost = "0.12"
tonic-health = "0.9.2"
tonic-web = "0.10.2"
tower-http = "0.4.4"
prost-types = "0.12.1"
simple_logger = "4.2.0"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.10.0"
